Fix bugs on mobile version

--- a/src/styles/blocks/benefits.scss
+++ b/src/styles/blocks/benefits.scss
@@ -26,6 +26,7 @@
   }
 
   &__button {
+    max-width: 240px;
     margin-bottom: 40px;
   }
 
