--- a/src/styles/blocks/bg-rectangle.scss
+++ b/src/styles/blocks/bg-rectangle.scss
@@ -1,6 +1,5 @@
 .bg-rectangle {
-  height: 100%;
+  background-color: #ffec7a;;
   width: 100%;
-  background-repeat: no-repeat;
   z-index: -1;
 }
