--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -12,6 +12,8 @@
   }
 
   &__image {
+    display: block;
+    margin: 0 auto;
     margin-bottom: 36px;
   }
 
