--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,17 +6,17 @@
     letter-spacing: 0.15em;
     text-transform: uppercase;
 
-    color: #000000;
+    color: #000;
   }
 
   &__copyright {
-    font-family: "Manrope";
+    font-family: "Manrope", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
 
     text-align: center;
-    color: #000000;
+    color: #000;
     margin-bottom: 30px;
   }
 }
