--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -34,6 +34,8 @@
   }
 
   &__logo {
+    display: block;
+    margin: 0 auto;
     margin-bottom: 25px;
   }
 
@@ -62,6 +64,12 @@
     line-height: 150%;
 
     margin-bottom: 20px;
+  }
+
+  &__button {
+    display: block;
+    max-width: 260px;
+    margin: 0 auto;
   }
 
 }
