--- a/src/styles/blocks/materials.scss
+++ b/src/styles/blocks/materials.scss
@@ -14,6 +14,8 @@
     background: linear-gradient(180deg, #fff 0%,
     rgba(255, 255, 255, 0) 40.93%),
       url(../images/materials_logo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     transform: translateY(-82px);
     z-index: -1;
   }
