--- a/src/styles/blocks/potr-size.scss
+++ b/src/styles/blocks/potr-size.scss
@@ -29,6 +29,8 @@
   }
 
   &__logo {
+    display: block;
+    margin: 0 auto;
     margin-bottom: 30px;
   }
 
