--- a/src/styles/blocks/potr-team.scss
+++ b/src/styles/blocks/potr-team.scss
@@ -1,10 +1,14 @@
 .potr-team {
-  position: relative;
+
+  &__content {
+    position: relative;
+  }
 
   &__bg {
-    background-image: url("../images/potr-team_bg.svg");
+    clip-path: polygon(0 0, 100% 0, 100% 73%, 0% 100%);
+    top: 70%;
     position: absolute;
-    top: 71%;
+    height: 293px;
   }
 
   &__title {
@@ -15,6 +19,8 @@
   }
 
   &__logo {
+    display: block;
+    margin:0 auto;
     margin-bottom: 30px;
   }
 
